src/objects/Pivotal_Integrated_Product_Version__c.object
<CustomObject>
    <fields>
        <fullName>End_of_Life_Piv__c</fullName>
        <description>Date of which the Partner is ending of life-ing the product.</description>
        <label>End of Life</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Product_Name_Piv__c</fullName>
        <label>Product Name</label>
        <referenceTo>Pivotal_Integrated_Product__c</referenceTo>
        <relationshipLabel>Product Versions</relationshipLabel>
        <relationshipName>Pivotal_Integrated_Product_Versions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Release_Date_Piv__c</fullName>
        <label>Release Date</label>
        <type>Date</type>
    </fields>
    <label>Pivotal Integrated Product Version</label>
    <nameField>
        <label>Version</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pivotal Integrated Product Versions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>